# matrot

./: Matrix.py  README.md  testmatrix.py
asm/: generate_raw_matrix.c  make.sh  rotatematrix.asm
cbp/: .gitignore  configure.ac
cbp/src/: Makefile.am  matrix.c  matrix.h  matrix_main.c
cbp/tests/: Makefile.am  tests_matrix.c
